--- a/package.json
+++ b/package.json
@@ -54,7 +54,25 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "semi": ["error", "always"],
+      "array-callback-return": 1,
+      "camelcase": 0,
+      "capitalized-comments": 0,
+      "curly": 1,
+      "no-var": "error",
+      "no-console": 1,
+      "no-restricted-modules": "off",
+      "no-mixed-spaces-and-tabs": "warn",
+      "global-require": "warn",
+      "indent": [0, "tab"],
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "@typescript-eslint/no-var-requires": 0,
+      "no-case-declarations": 0,
+      "arrow-parens": 1
+    },
     "overrides": [
       {
         "files": [
